# XMC4500-CMake

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: XMC4500.h.09D22C279506CAA1.idx  cmsis_compiler.h.45A9EA366E48B082.idx  cmsis_gcc.h.F71EC74330952167.idx  core_cm4.h.B00B70195520FADA.idx  main.c.BEE153DA874B04EC.idx  startup_XMC4500.S.7C8ED24846573E24.idx  stdbool.h.6F4F4A64A4012700.idx  stddef.h.588DF1CAFCA2F699.idx  stdint.h.607AB3568676C67C.idx  syscalls.c.909329240BBE1409.idx  system_XMC4500.c.DF6CA6D26D6D1CA2.idx  system_XMC4500.h.40ECCE8998949170.idx  xmc4_gpio.c.77A4156FD56CD2FC.idx  xmc4_gpio.h.0B39A3F48D7C0582.idx  xmc4_gpio_map.h.F2DB621096B2C970.idx  xmc_common.h.F37E6B5136CF98CA.idx  xmc_device.h.8E9BA8F6F741D7BE.idx  xmc_gpio.c.853F99C6AE634DAD.idx  xmc_gpio.h.1C410A77F45D1A54.idx
cmake/: xmc4500.cmake
gdb/: GDBCommands  JLinkLog
jlink/: JLinkCommands
lib/: syscalls.o.lst  system_XMC4500.o.lst  xmc4_gpio.o.lst  xmc_gpio.o.lst
src/: main.c
